feat: add teamController
