# src/routes/v1/users.routes.js
@@ -6,6 +6,7 @@ const userRoutes = new Router();
 userRoutes.get('/users', UserController.index);
 userRoutes.get('/user/:id', UserController.getById);
 userRoutes.post('/user', UserController.create);
+userRoutes.post('/user/login', UserController.login);
 userRoutes.put('/user', UserController.update);
 userRoutes.delete('/user/:id', UserController.delete);
 
